//file:noinspection GradlePackageUpdate
plugins {
    id 'org.springframework.boot' version '2.7.14'
    id 'io.freefair.lombok' version '8.1.0'
    id 'io.spring.dependency-management' version '1.1.2'
    id 'java'
}

repositories {
    mavenCentral()
}

ext {
    cehComponentsVersion = '1.0.46'
}

bootJar {
    archiveFileName = 'app.jar'
}

compileJava {
    options.compilerArgs.add '-Xlint:deprecation'
    options.incremental = true
}

java.sourceCompatibility = JavaVersion.VERSION_17

dependencies {
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava'
    implementation 'com.google.guava:guava:30.1.1-jre'
    implementation 'com.jayway.jsonpath:json-path'
    implementation 'com.nimbusds:nimbus-jose-jwt:9.15.2'
    implementation 'com.vividsolutions:jts:1.13'
    implementation 'javax.cache:cache-api:1.1.1'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.apache.jena:jena-tdb:4.2.0'
    implementation 'org.apache.solr:solr-solrj'
    implementation 'org.ehcache:ehcache:3.9.7'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.8'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation "uk.ac.ceh.components:datastore-git:${cehComponentsVersion}"
    implementation "uk.ac.ceh.components:userstore-crowd:${cehComponentsVersion}"
    implementation "uk.ac.ceh.components:userstore-inmemory:${cehComponentsVersion}"
    implementation "uk.ac.ceh.components:springsecurity-userstore:${cehComponentsVersion}"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.xmlunit:xmlunit-core'
    testImplementation 'org.xmlunit:xmlunit-matchers'
}

test {
    useJUnitPlatform()
    testLogging {
        events "skipped", "failed"
    }
}
